# miniaudio

./: CMakeLists.txt  README.md  build.sh  premake5.lua
support/cmake/: miniaudio.cmake.in  miniaudio.pc.in
